# EssencIel

./: .env.example  README.md  conftest.py  project.md  pyproject.toml
.github/workflows/: ci.yml
bigquery/: schema.json
deploy/: DEPLOY.md  env.example  essenciel-ingestion.service  essenciel-ingestion.timer  essenciel.service  nginx.conf
django_api/carburants/: bq_client.py  queries.py  views_front.py
django_api/carburants/templates/carburants/: recherche.html
django_api/carburants/templatetags/: carburants_tags.py
infra/: scheduler.yaml
ingestion/: main.py  requirements.txt
ingestion/infra/: scheduler.yaml  setup_bq.py
tests/ingestion/: test_main.py
tests/web/: test_views.py
web/carburants/: bq_client.py  middleware.py  models.py  queries.py  urls.py  urls_front.py  views.py  views_front.py
web/carburants/management/commands/: ingest.py
web/carburants/migrations/: 0001_initial.py
web/carburants/templates/carburants/: base.html  carte.html  evolution.html  index.html  trouver.html
web/config/: settings.py  urls.py
