[tool.poetry]
package-mode = false

[project]
name = "essenciel"
version = "0.1.0"
description = "Pipeline carburants — BigQuery + Django"
authors = [
    {name = "BertrandMiannay",email = "bertrandmiannay@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "django (>=4.2,<5.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "google-cloud-bigquery (>=3.41.0,<4.0.0)",
    "google-cloud-storage (>=3.10.1,<4.0.0)",
    "requests (>=2.34.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
